# notiftest

./: .gitignore  .mcp.json  CLAUDE.md  app.json  package.json  pnpm-lock.yaml
.claude/: settings.json  settings.local.json
backend/: pyproject.toml
backend/dj/: main.py  manage.py  pyproject.toml
backend/dj/fcmapp/: apps.py  models.py  urls.py  views.py
backend/dj/fcmapp/libs/: fcm.py
backend/dj/fcmapp/migrations/: 0001_initial.py
backend/dj/fcmtest/: asgi.py  settings.py  urls.py  wsgi.py
backend/fast/: main.py  pyproject.toml
backend/fast/models/: offer.py
backend/fast/routers/: dev.py  notifications.py  offers.py  presence.py
backend/fast/services/: fcm_relay.py  offer_store.py
docs/superpowers/plans/: 2026-04-21-service-engineer-offer.md  2026-04-21-service-engineer-offer.resume.yaml
docs/superpowers/specs/: 2026-04-21-service-engineer-offer-design.md
frontend/: App.tsx  app.json  index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/components/: ws.tsx
frontend/src/nav/: JobDetailsScreen.tsx  RootNavigator.tsx  deepLink.ts
frontend/src/offer/: DeclineReasonSheet.tsx  OfferCard.tsx  OfferOverlay.tsx  useCountdown.ts
frontend/src/presence/: PresenceToggle.tsx
frontend/src/service/: deviceId.ts  envelope.ts  fcm.ts  notifications.ts  offerApi.ts  presenceApi.ts  websocket.ts
frontend/src/store/: bootSlice.ts  hydrate.ts  index.ts  offerSlice.ts  persistMiddleware.ts  persistence.ts  presenceSlice.ts  rootReducer.ts
frontend/src/types/: offer.ts  presence.ts
