[project]
name = "fast"
version = "0.1.0"
description = "FastAPI based backend server for testing WS"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "code-review-graph>=2.3.2",
    "django>=6.0.4",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "fastapi[standard]>=0.136.0",
    "firebase-admin>=7.4.0",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "websockets>=16.0",
]

[dependency-groups]
dev = ["ruff>=0.15.11"]
